--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Layout</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <div id="container">
+        <header>
+
+        </header>
+
+        <main>
+            
+        </main>
+
+        <div class="top_content"></div>
+
+        <section>           
+            <div class="col_left"></div>
+            <div class="center"></div>
+            <div class="col_right"></div>
+        </section> 
+
+        <footer></footer>
+    </div>
 </body>
 </html>
